# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/amd64.py,
  arch/mips.py:
  Rearrange things in the arch/*.py files to ensure that nothing is used
  before it has been defined.

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> arch/powerpc.py:
  Reorder arch/powerpc.py to make python happy

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/snapshot_target.py:
  Change .svn --include to an --exclude like it was supposed to be

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/mips.py,
  catalyst:
  Added several subarches for mips so we can dump the mips subarch profiles
  from my shiny new multi-parent profile structure. This is 2.0.6_pre1 for
  testing.

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Changed the code for copying the MOTD files so it's fewer lines and makes
  more sense.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> +arch/powerpc.py,
  -arch/ppc.py, -arch/ppc64.py, arch/sparc.py, -arch/sparc64.py:
  Merged ppc.py and ppc64.py into powerpc.py and merged sparc.py and
  sparc64.py into sparc.py, so we have a cleaner set of arch files.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/amd64.py,
  arch/x86.py:
  Did a little cleanup on the x86.py to remove some redundant entries and
  added nocona and core2 to amd64.py, though they're currently commented out.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Write out HOSTUSE settings from arch/*.py to make.conf as well as any USE
  flags defined in the spec file.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc64.py:
  Added a patch from Markus Rothe <corsair@gentoo.org> to add power6 and cell
  subarches to ppc64 for bug #208860 and removing redundant CXXFLAGS settings,
  since catalyst sets CXXFLAGS=CFLAGS by default.
