@@ -17,9 +17,13 @@ setup_gk_args() {
 			 --kerneldir=/usr/src/linux \
 			 --kernel-config=/var/tmp/${clst_kname}.config \
 			 --modulespackage=/tmp/kerncache/${clst_kname}-modules-${clst_version_stamp}.tar.bz2 \
-			 --minkernpackage=/tmp/kerncache/${clst_kname}-kernel-initrd-${clst_version_stamp}.tar.bz2 \
-			 --kerncache=/tmp/kerncache/${clst_kname}-kerncache-${clst_version_stamp}.tar.bz2 all"
+			 --minkernpackage=/tmp/kerncache/${clst_kname}-kernel-initrd-${clst_version_stamp}.tar.bz2 all"
 	# extra genkernel options that we have to test for
+	if [ -n "${clst_KERNCACHE}" ]
+	then
+		GK_ARGS="${GK_ARGS}  --kerncache=/tmp/kerncache/${clst_kname}-kerncache-${clst_version_stamp}.tar.bz2"
+	fi
+
 	if [ "${clst_splash_type}" == "bootsplash" -a -n "${clst_splash_theme}" ]
 	then
 		GK_ARGS="${GK_ARGS} --bootsplash=${clst_splash_theme}"
